build SimpleLooper(not done yet);
Signed-off-by: lyzirving <lyzirving@sina.com>

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.4.1)
 
-include_directories(${CMAKE_SOURCE_DIR}/include/common)
-include_directories(${CMAKE_SOURCE_DIR}/include/renderer)
+include_directories(${CMAKE_SOURCE_DIR}/common/include)
+include_directories(${CMAKE_SOURCE_DIR}/renderer/include)
 
+aux_source_directory(${CMAKE_SOURCE_DIR}/common CPP_COMMON)
 aux_source_directory(${CMAKE_SOURCE_DIR}/renderer CPP_RENDERER)
 
 add_library( # Sets the name of the library.
@@ -11,6 +12,7 @@ add_library( # Sets the name of the library.
              SHARED
              # Provides a relative path to your source file(s).
              JniLoader.cpp
+             ${CPP_COMMON}
              ${CPP_RENDERER})
 
 target_link_libraries( # Specifies the target library.
