--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -23,4 +23,5 @@ target_link_libraries( # Specifies the target library.
                        EGL
                        GLESv2
                        GLESv3
-                       jnigraphics)
+                       jnigraphics
+                       nativewindow)
