finish register and remove WindowSurface;
Signed-off-by: lyzirving <lyzirving@sina.com>

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -19,9 +19,9 @@ target_link_libraries( # Specifies the target library.
                        lib-assembler
                        # Links the target library to the log library
                        # included in the NDK.
+                       android
                        log
                        EGL
                        GLESv2
                        GLESv3
-                       jnigraphics
-                       nativewindow)
+                       jnigraphics)
