add package helper;
Signed-off-by: liuyuzhou <lyzirving@sina.com>

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 3.4.1)
 
 include_directories(${CMAKE_SOURCE_DIR}/common/include)
 include_directories(${CMAKE_SOURCE_DIR}/renderer/include)
+include_directories(${CMAKE_SOURCE_DIR}/helper/include)
 
 aux_source_directory(${CMAKE_SOURCE_DIR}/common CPP_COMMON)
 aux_source_directory(${CMAKE_SOURCE_DIR}/renderer CPP_RENDERER)
+aux_source_directory(${CMAKE_SOURCE_DIR}/helper CPP_HELPER)
 
 add_library( # Sets the name of the library.
              lib-assembler
@@ -13,7 +15,8 @@ add_library( # Sets the name of the library.
              # Provides a relative path to your source file(s).
              JniLoader.cpp
              ${CPP_COMMON}
-             ${CPP_RENDERER})
+             ${CPP_RENDERER}
+             ${CPP_HELPER})
 
 target_link_libraries( # Specifies the target library.
                        lib-assembler
