1. create class Model; 2. import stb_image;
Signed-off-by: lyzirving <lyzirving@sina.com>

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -3,11 +3,13 @@ cmake_minimum_required(VERSION 3.4.1)
 include_directories(${CMAKE_SOURCE_DIR}/common/include)
 include_directories(${CMAKE_SOURCE_DIR}/renderer/include)
 include_directories(${CMAKE_SOURCE_DIR}/helper/include)
+include_directories(${CMAKE_SOURCE_DIR}/model/include)
 include_directories(${CMAKE_SOURCE_DIR}/third/include)
 
 aux_source_directory(${CMAKE_SOURCE_DIR}/common CPP_COMMON)
 aux_source_directory(${CMAKE_SOURCE_DIR}/renderer CPP_RENDERER)
 aux_source_directory(${CMAKE_SOURCE_DIR}/helper CPP_HELPER)
+aux_source_directory(${CMAKE_SOURCE_DIR}/model CPP_MODEL)
 
 add_library(lib-assimp
             SHARED
@@ -25,7 +27,8 @@ add_library( # Sets the name of the library.
              JniLoader.cpp
              ${CPP_COMMON}
              ${CPP_RENDERER}
-             ${CPP_HELPER})
+             ${CPP_HELPER}
+             ${CPP_MODEL})
 
 target_link_libraries( # Specifies the target library.
                        lib-assembler
