revise some bugs;
Signed-off-by: lyzirving <lyzirving@sina.com>

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -39,4 +39,5 @@ target_link_libraries( # Specifies the target library.
                        EGL
                        GLESv2
                        GLESv3
-                       jnigraphics)
+                       jnigraphics
+                       lib-assimp)
