build scene renderer context;
Signed-off-by: lyzirving <lyzirving@sina.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity android:name=".ui.LineActivity"
             android:launchMode="singleTask" />
 
+        <activity android:name=".ui.SceneActivity"
+            android:launchMode="singleTask" />
+
     </application>
 
 </manifest>
